# internal/market/section/handler/model.go
@@ -1,0 +1,9 @@
+package handler
+
+import (
+	marketsection "github.com/vetrovegor/kushfinds-backend/internal/market/section"
+)
+
+type MarketSectionsResponse struct {
+	MarketSections []marketsection.MarketSection `json:"marketSections"`
+}
