# internal/market/section/model.go
@@ -1,0 +1,6 @@
+package marketsection
+
+type MarketSection struct {
+	ID   int    `json:"id"`
+	Name string `json:"name"`
+}
